update for testcafe profile