@@ -215,4 +215,32 @@
             </plugin>
         </plugins>
     </build>
+	<profiles>
+		<profile>
+			<id>testcafe</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<version>2.17</version>
+						<configuration>
+							<runOrder>alphabetical</runOrder>
+							<testClassesDirectory>${test.dir}</testClassesDirectory>
+							<additionalClasspathElements>
+								<additionalClasspathElement>lib</additionalClasspathElement>
+							</additionalClasspathElements>
+							<includes>
+								<include>**/*TestCafe.*</include>
+							</includes>
+							<reportsDirectory>${report.dir}</reportsDirectory>
+							<forkCount>2</forkCount>
+							<argLine>-Xmx256m -XX:MaxPermSize=128m</argLine>
+							<reuseForks>true</reuseForks>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
